# dreamandroid

./: .gitignore  .gitmodules  AGENTS.md  README.md  VERSION  VERSION_NAME  settings.gradle.kts
.codebuddy/: rules.md
.github/workflows/: build.yml
RULES4AGENTS/: ArchitectureReview.md  PrdReqDoc.md  VERSION.md
app/: build.gradle.kts
app/src/androidTest/java/io/github/dreamandroid/local/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakePresets.json  SampleApp.patch
app/src/main/cpp/src/: Config.hpp  QnnModel.hpp  main.cpp
app/src/main/java/io/github/dreamandroid/local/: DreamAndroidApplication.kt  MainActivity.kt
app/src/main/java/io/github/dreamandroid/local/core/error/: AppError.kt
app/src/main/java/io/github/dreamandroid/local/core/functional/: Functions.kt
app/src/main/java/io/github/dreamandroid/local/core/model/: DreamHubConstants.kt  GenerateParams.kt
app/src/main/java/io/github/dreamandroid/local/data/: CharBitmap.kt  FuzzyMatcher.kt  HistoryFilter.kt  HistoryManager.kt  HistoryMigration.kt  Model.kt  Preferences.kt  QueueModels.kt  TagAutocompleteRepository.kt  TagModels.kt  TagText.kt  ThemePreferences.kt  TopKLongs.kt
app/src/main/java/io/github/dreamandroid/local/data/db/: AppDatabase.kt  HistoryDao.kt  HistoryEntity.kt
app/src/main/java/io/github/dreamandroid/local/navigation/: Navigation.kt
app/src/main/java/io/github/dreamandroid/local/service/: BackendService.kt  BackgroundGenerationService.kt  ModelDownloadService.kt  QueueRepository.kt  UpscaleBackendManager.kt
app/src/main/java/io/github/dreamandroid/local/service/backend/: BackendManager.kt  RuntimeDirPreparer.kt
app/src/main/java/io/github/dreamandroid/local/service/http/: HttpClientProvider.kt
app/src/main/java/io/github/dreamandroid/local/service/queue/: QueueProcessingService.kt  SseStreamParser.kt
app/src/main/java/io/github/dreamandroid/local/ui/components/: BlockingProgressOverlay.kt  ErrorMessageCard.kt  GenerationParamsDialog.kt  ParamShareDialogs.kt  PromptTagTextField.kt  SmoothWavyProgressIndicators.kt  ZoomableImageOverlay.kt
app/src/main/java/io/github/dreamandroid/local/ui/screens/: BrowseScreen.kt  CropImageScreen.kt  GenerateScreen.kt  HistoryFilterUI.kt  InpaintScreen.kt  MigrationScreen.kt  ModelListScreen.kt  ModelRunScreen.kt  QueueScreen.kt  UpscaleScreen.kt
app/src/main/java/io/github/dreamandroid/local/ui/theme/: Color.kt  Motion.kt  PresetSchemes.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/io/github/dreamandroid/local/utils/: ImageUtils.kt  LogCapture.kt  ParamShare.kt  SchedulerNames.kt
app/src/main/java/io/github/xororz/localdream/data/: Model.kt
app/src/main/java/io/github/xororz/localdream/service/: BackendService.kt
app/src/main/java/io/github/xororz/localdream/ui/screens/: ModelRunScreen.kt  UpscaleScreen.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/io/github/dreamandroid/local/: ExampleUnitTest.kt
gradle/: libs.versions.toml
